Add phylogenetic tree plot in Plotly

--- a/gcp/GCP_python.ipynb
+++ b/gcp/GCP_python.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "!pip install --upgrade google-api-python-client\n",
     "!pip install google-auth\n",
-    "!pip install oauth2client"
+    "!pip install oauth2client\n",
+    "!pip install google-cloud"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +32,9 @@
     "from six.moves import input\n",
     "from pprint import pprint\n",
     "import time\n",
+    "import subprocess\n",
+    "import json\n",
+    "import shlex\n",
     "import os\n",
     "path_to_key = '/Users/pgreisen/Projects/Enevolv/keys_gcp/ngsdataanalysis-08329a276003.json'\n",
     "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = path_to_key"
@@ -86,6 +90,253 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execute the gcloud command to get a list of projects\n",
+    "# and load data in JSON format for further processing\n",
+    "project_list_command = \"gcloud projects list --format json\"\n",
+    "project_output = subprocess.check_output(shlex.split(project_list_command))\n",
+    "project_output_json = json.loads(project_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'createTime': '2019-02-20T21:06:25.442Z', 'lifecycleState': 'ACTIVE', 'name': 'NGSDataAnalysis', 'parent': {'id': '560005721622', 'type': 'organization'}, 'projectId': 'ngsdataanalysis', 'projectNumber': '218380470323'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(project_output_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "us-east1-d\n",
+      "########################\n",
+      "RUNNING\n",
+      "########################\n",
+      "ngsdataanalysis\n",
+      "Executing command \"gcloud compute instances delete instance-1 --zone us-east1-d --project ngsdataanalysis\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "debug=1\n",
+    "delete = 1\n",
+    "instance_action = \"delete\" # stop\n",
+    "# For each project id in the list, get the instance details\n",
+    "for project_row in project_output_json:\n",
+    "    project_id = project_row[\"projectId\"]\n",
+    "    instance_list_command = \"gcloud compute instances list --format json --project \"+ project_id\n",
+    "    instance_output_josn = json.loads(subprocess.check_output(shlex.split(instance_list_command)))\n",
+    "    if(debug == 1111):\n",
+    "        print(instance_output_josn)\n",
+    "    # For every instance in the list check the label key and value and execute specified action\n",
+    "    for instance_row in instance_output_josn:\n",
+    "        #instance_name = \"\"\n",
+    "        #instance_zone = \"\"\n",
+    "        instance_name = instance_row[\"name\"]\n",
+    "        instance_zone = ''.join(instance_row[\"zone\"].split('/')[-1:])\n",
+    "        print(instance_zone)\n",
+    "        print(\"########################\")\n",
+    "        print(instance_row[\"status\"]) #,instance_zone)\n",
+    "        print(\"########################\")\n",
+    "        print(project_id)\n",
+    "        # print(instance_row)\n",
+    "        if(delete == 1):\n",
+    "            instance_action_command = \"gcloud compute instances \" + instance_action + \" \" \\\n",
+    "                + instance_name + \" --zone \" + instance_zone + \" --project \" + project_id\n",
+    "            print(\"Executing command \\\"\" + instance_action_command + \"\\\"\")\n",
+    "            subprocess.check_output(shlex.split(instance_action_command))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "project_id,name,labels-app-name,labels-biz-unit,labels-env-name,metadata-server-role,metadata-server-type,metadata-os-image\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Example of using gcloud & Python to get instance labels and metadata\"\"\"\n",
+    "\n",
+    "import subprocess\n",
+    "import json\n",
+    "import shlex\n",
+    "\n",
+    "output = []\n",
+    "output_row = []\n",
+    "# Change the header row based on your requirement\n",
+    "header_row = \"project_id,name,labels-app-name,labels-biz-unit,labels-env-name,metadata-server-role,metadata-server-type,metadata-os-image\"\n",
+    "\n",
+    "# Execute the gcloud command to get a list of projects\n",
+    "# and load data in JSON format for further processing\n",
+    "project_list_command = \"gcloud projects list --format json\"\n",
+    "project_output = subprocess.check_output(shlex.split(project_list_command))\n",
+    "project_output_json = json.loads(project_output)\n",
+    "\n",
+    "# For each project id in the list, get the instance details\n",
+    "for project_row in project_output_json:\n",
+    "    instance_list_command = \"gcloud compute instances list --format json --project \"+ project_row[\"projectId\"]\n",
+    "    instance_output_josn = json.loads(subprocess.check_output(shlex.split(instance_list_command)))\n",
+    "    # For every instance in the list get the labels and metadata as required\n",
+    "    for instance_row in instance_output_josn:\n",
+    "        output_row = []\n",
+    "        metadata_dict = {}\n",
+    "        output_row.append(project_row[\"projectId\"]) # Add project id to the begining of the output row\n",
+    "        output_row.extend([instance_row[\"name\"],instance_row[\"labels\"][\"app-name\"],instance_row[\"labels\"][\"biz-unit\"],instance_row[\"labels\"][\"env-name\"]])\n",
+    "        for metadata_entry in instance_row[\"metadata\"][\"items\"]: # Metadata is nested field so would need further processing\n",
+    "            metadata_dict[metadata_entry['key']] = metadata_entry['value']\n",
+    "        output_row.extend([metadata_dict['server-role'], metadata_dict['server-type'], metadata_dict['os-image']])\n",
+    "        output.append(output_row)\n",
+    "\n",
+    "# Print the header row and the instance data rows to stdout\n",
+    "print(header_row)\n",
+    "for row in output:\n",
+    "    print(','.join(row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!pip install google-cloud\n",
+    "!pip install google-cloud-storage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Bucket: enevolv_ngs-1>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list storage in buckets\n",
+    "import os\n",
+    "from google.cloud import storage\n",
+    "\n",
+    "# set further up in the code\n",
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = path_to_key\n",
+    "\n",
+    "# Instantiates a client\n",
+    "storage_client = storage.Client()\n",
+    "\n",
+    "# List all the buckets available\n",
+    "for bucket in storage_client.list_buckets():\n",
+    "    print(bucket)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from google.cloud import storage\n",
+    "# create storage client\n",
+    "storage_client = storage.Client.from_service_account_json('/Users/ey/testpk.json')\n",
+    "# get bucket with name\n",
+    "bucket = storage_client.get_bucket('testdatabucket00123')\n",
+    "# get bucket data as blob\n",
+    "blob = bucket.get_blob('testdata.xml')\n",
+    "# convert to string\n",
+    "json_data = blob.download_as_string()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "garfield/\n",
+      "garfield/data/\n",
+      "garfield/data/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8.subreadset.xml\n",
+      "garfield/data/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8/incoming/r54328_20190304_200201/1_A01/m54328_190304_202619.adapters.fasta\n",
+      "garfield/data/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8/incoming/r54328_20190304_200201/1_A01/m54328_190304_202619.scraps.bam\n",
+      "garfield/data/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8/incoming/r54328_20190304_200201/1_A01/m54328_190304_202619.scraps.bam.pbi\n",
+      "garfield/data/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8/incoming/r54328_20190304_200201/1_A01/m54328_190304_202619.sts.xml\n",
+      "garfield/data/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8/incoming/r54328_20190304_200201/1_A01/m54328_190304_202619.subreads.bam\n",
+      "garfield/data/e1ed2166-115c-4bc6-9cc3-f5ee3155b7d8/incoming/r54328_20190304_200201/1_A01/m54328_190304_202619.subreads.bam.pbi\n",
+      "garfield/data/ref_seqs/\n",
+      "garfield/data/ref_seqs/GAR0311.fa\n",
+      "garfield/data/ref_seqs/GAR311_PacBio_amplicon.fa\n",
+      "garfield/data/ref_seqs/GAR311_PacBio_amplicon.fa.fai\n",
+      "garfield/data/ref_seqs/GAR311_mutagenesis_primers.txt\n",
+      "garfield/data/ref_seqs/mutation_map.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "import sys\n",
+    "from google.cloud import storage\n",
+    "\n",
+    "BUCKET = 'enevolv_ngs-1'\n",
+    "\n",
+    "# Create a Cloud Storage client.\n",
+    "gcs = storage.Client()\n",
+    "\n",
+    "# Get the bucket that the file will be uploaded to.\n",
+    "bucket = gcs.get_bucket(BUCKET)\n",
+    "\n",
+    "def my_list_bucket(bucket_name, limit=sys.maxsize):\n",
+    "  a_bucket = gcs.lookup_bucket(bucket_name)\n",
+    "  bucket_iterator = a_bucket.list_blobs()\n",
+    "  for resource in bucket_iterator:\n",
+    "    print(resource.name)\n",
+    "    limit = limit - 1\n",
+    "    if limit <= 0:\n",
+    "      break\n",
+    "\n",
+    "my_list_bucket(BUCKET, limit=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -97,6 +348,51 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_bucket(self, bucket):\n",
+    "  \"\"\"Create several files and paginate through them.\n",
+    "\n",
+    "  Production apps should set page_size to a practical value.\n",
+    "\n",
+    "  Args:\n",
+    "    bucket: bucket.\n",
+    "  \"\"\"\n",
+    "  self.response.write('Listbucket result:\\n')\n",
+    "\n",
+    "  page_size = 1\n",
+    "  stats = gcs.listbucket(bucket + '/foo', max_keys=page_size)\n",
+    "  while True:\n",
+    "    count = 0\n",
+    "    for stat in stats:\n",
+    "      count += 1\n",
+    "      self.response.write(repr(stat))\n",
+    "      self.response.write('\\n')\n",
+    "\n",
+    "    if count != page_size or count == 0:\n",
+    "      break\n",
+    "    stats = gcs.listbucket(bucket + '/foo', max_keys=page_size,\n",
+    "                           marker=stat.filename)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1017,7 +1313,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
