--- a/develop/Plotly/Widgets/Untitled.ipynb
+++ b/develop/Plotly/Widgets/Untitled.ipynb
@@ -6,20 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/pgreisen/anaconda2/lib/python2.7/site-packages/IPython/html.py:14: ShimWarning:\n",
-      "\n",
-      "The `IPython.html` package has been deprecated. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
-      "\n",
-      "/Users/pgreisen/anaconda2/lib/python2.7/site-packages/IPython/utils/traitlets.py:5: UserWarning:\n",
-      "\n",
-      "IPython.utils.traitlets has moved to a top-level traitlets package.\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "application/javascript": [
        "window.genUID = function() {\n",
@@ -29,17 +15,8 @@
        "    });\n",
        "};\n",
        "\n",
-       "var IPYTHON_VERSION = '3';\n",
        "\n",
-       "require([\"widgets/js/widget\", \"widgets/js/manager\"], function (widget, manager) {\n",
-       "    if (!('DOMWidgetView' in widget)) {\n",
-       "\n",
-       "        // we're in IPython2, things moved a bit from 2 --> 3.\n",
-       "        // construct the expected IPython3 widget API\n",
-       "        IPYTHON_VERSION = '2';\n",
-       "        manager = {WidgetManager: widget};\n",
-       "        widget = {DOMWidgetView: IPython.DOMWidgetView};\n",
-       "    }\n",
+       "define('graphWidget', [\"@jupyter-widgets/base\"], function (widget) {\n",
        "\n",
        "    var GraphView = widget.DOMWidgetView.extend({\n",
        "        render: function(){\n",
@@ -183,7 +160,9 @@
        "    });\n",
        "\n",
        "    // Register the GraphView with the widget manager.\n",
-       "    manager.WidgetManager.register_widget_view('GraphView', GraphView);\n",
+       "    return {\n",
+       "        GraphView: GraphView\n",
+       "    }\n",
        "\n",
        "});\n",
        "\n",
@@ -210,9 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import data\n",
@@ -222,24 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -307,7 +284,7 @@
        "4  Job E           2009-02-25           2009-06-30        14        A"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,33 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30e5d0c0e00344fab636f5e4a0e92daa",
+       "model_id": "9e8285a9b4434351aa399d755d8f5ea7",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>Dropdown</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another notebook frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
       "text/plain": [
-       "Dropdown(description=u'Resource', options=('A', 'C', 'B'), value='A')"
+       "Dropdown(description='Resource', options=('A', 'C', 'B'), value='A')"
       ]
      },
      "metadata": {},
@@ -353,25 +315,10 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a1e415dbc7046fdb4d6cf5149b430c7",
+       "model_id": "a5b62381bdfb40cf982ab66a89b0099a",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>GraphWidget</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in Jupyter Notebook or JupyterLab, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another notebook frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
       "text/plain": [
        "GraphWidget()"
       ]
@@ -417,10 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "widgets.Dropdown.observe?\n"
@@ -429,30 +374,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
