Add PSSM design to ligand design

--- a/presentations/20190706_ComputationalDesignOfSmallMolecules.ipynb
+++ b/presentations/20190706_ComputationalDesignOfSmallMolecules.ipynb
@@ -604,7 +604,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c56c8efdc6f649f9bc058dab06e7950c",
+       "model_id": "1f7e1713be82490792790e5a64bfddf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1226,6 +1226,22 @@
     }
    },
    "source": [
+    "## Controlling complex formation through small molecules\n",
+    "<center>\n",
+    "    <img src=\"img/danoprovir_application.png\" width=\"400\">\n",
+    "</center>\n",
+    "\n",
+    "**Foight, Wang, Wei, Greisen** *submitted to Nature Biotechnology*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Biosensor in yeast\n",
     "<center>\n",
     "    <img src=\"img/yeast_sensorsystem.png\" width=\"400\">\n",
@@ -1252,7 +1268,7 @@
     "    * Ligand conformations\n",
     "* Increase of data\n",
     "    * Crystal structures\n",
-    "    * Sequencing"
+    "    * Sequencing of protein ligand binders"
    ]
   },
   {
@@ -1271,6 +1287,7 @@
     "* Jiayi Dou\n",
     "* Zhizhi Wang\n",
     "* Yi Sheng\n",
+    "* Keunwan Park\n",
     "* Glenna Foight\n",
     "* Ben Jester\n",
     "* Christy Tinberg\n",
