Add scripts to compute ddG values based on PSSM data

--- a/develop/ParserForSynergyPlateReader/PlateReaderParser_for_SynergyH1.ipynb
+++ b/develop/ParserForSynergyPlateReader/PlateReaderParser_for_SynergyH1.ipynb
@@ -417,7 +417,7 @@
        "      <th>Index</th>\n",
        "      <th>variable</th>\n",
        "      <th>Value</th>\n",
-       "      <th>Id</th>\n",
+       "      <th>PlatemapID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -461,12 +461,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  Index variable  Value  Id\n",
-       "0     A        1  0.826  A1\n",
-       "1     B        1  0.892  B1\n",
-       "2     C        1  0.905  C1\n",
-       "3     D        1  0.939  D1\n",
-       "4     E        1  0.932  E1"
+       "  Index variable  Value PlatemapID\n",
+       "0     A        1  0.826         A1\n",
+       "1     B        1  0.892         B1\n",
+       "2     C        1  0.905         C1\n",
+       "3     D        1  0.939         D1\n",
+       "4     E        1  0.932         E1"
       ]
      },
      "execution_count": 11,
@@ -475,13 +475,22 @@
     }
    ],
    "source": [
-    "plate_normalized_plate[\"Id\"] = plate_normalized_plate[\"Index\"]+plate_normalized_plate[\"variable\"].astype(str)\n",
+    "plate_normalized_plate[\"PlatemapID\"] = plate_normalized_plate[\"Index\"]+plate_normalized_plate[\"variable\"].astype(str)\n",
     "plate_normalized_plate.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plate_normalized_plate.rename(columns={'Value' : 'Read 1:600'},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -507,8 +516,8 @@
        "      <th></th>\n",
        "      <th>Index</th>\n",
        "      <th>variable</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>Id</th>\n",
+       "      <th>Read 2:485,515</th>\n",
+       "      <th>PlatemapID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -552,33 +561,158 @@
        "</div>"
       ],
       "text/plain": [
-       "  Index variable Value  Id\n",
-       "0     A        1  2705  A1\n",
-       "1     B        1  2013  B1\n",
-       "2     C        1  1898  C1\n",
-       "3     D        1  1784  D1\n",
-       "4     E        1  1667  E1"
+       "  Index variable Read 2:485,515 PlatemapID\n",
+       "0     A        1           2705         A1\n",
+       "1     B        1           2013         B1\n",
+       "2     C        1           1898         C1\n",
+       "3     D        1           1784         D1\n",
+       "4     E        1           1667         E1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "plate_not_normalized_plate = plate_not_normalized_plate.melt(id_vars=['Index'],value_name=\"Value\")\n",
-    "plate_not_normalized_plate[\"Id\"] = plate_not_normalized_plate[\"Index\"]+plate_not_normalized_plate[\"variable\"].astype(str)\n",
+    "plate_not_normalized_plate[\"PlatemapID\"] = plate_not_normalized_plate[\"Index\"]+plate_not_normalized_plate[\"variable\"].astype(str)\n",
+    "plate_not_normalized_plate.rename(columns={'Value' : 'Read 2:485,515'},inplace=True)\n",
     "plate_not_normalized_plate.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plate_not_normalized_plate.to_excel(\"20190628_test_platereader.xlsx\")"
+    "plate_not_normalized_plate[\"Plate_Number\"] = testdic[\"Plate Number\"][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>Read 1:600</th>\n",
+       "      <th>PlatemapID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.826</td>\n",
+       "      <td>A1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.892</td>\n",
+       "      <td>B1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.905</td>\n",
+       "      <td>C1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.939</td>\n",
+       "      <td>D1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.932</td>\n",
+       "      <td>E1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Index variable Read 1:600 PlatemapID\n",
+       "0     A        1      0.826         A1\n",
+       "1     B        1      0.892         B1\n",
+       "2     C        1      0.905         C1\n",
+       "3     D        1      0.939         D1\n",
+       "4     E        1      0.932         E1"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_normalized_plate.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plate_reformattet = pd.merge(right=plate_not_normalized_plate, right_on=\"PlatemapID\", left=plate_normalized_plate, left_on=\"PlatemapID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plate_reformattet = plate_reformattet[['Read 1:600', 'PlatemapID','Read 2:485,515', 'Plate_Number']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plate_reformattet.to_excel(\"20190730_platereader_reformat.xlsx\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
