--- a/presentations/20190706_ComputationalDesignOfSmallMolecules.ipynb
+++ b/presentations/20190706_ComputationalDesignOfSmallMolecules.ipynb
@@ -700,7 +700,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "hideCode": true,
+    "hideCode": false,
     "hidePrompt": true,
     "slideshow": {
      "slide_type": "subslide"
@@ -1298,7 +1298,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Hide code",
   "hide_code_all_hidden": true,
   "kernelspec": {
    "display_name": "Python 3",
