Changes to scripts

--- a/develop/ParserForSynergyPlateReader/formatplate.ipynb
+++ b/develop/ParserForSynergyPlateReader/formatplate.ipynb
@@ -1204,7 +1204,7 @@
    "outputs": [],
    "source": [
     "totdata.rename(columns={\n",
-    "    'Conc (uM)' : 'StartConc',\n",
+    "    'Conc (uM)' : 'StartConc (uM)',\n",
     "    'c' : 'Conc (uM)'}, inplace=True)"
    ]
   },
@@ -1476,28 +1476,14 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Plate_Number', 'StartConc', 'Dilution Factor', 'Largest Row',\n",
-       "       'Ligands', 'PlateID', 'plasmidID', 'PlatemapID', 'Read 1:600',\n",
-       "       'Read 2:485,515', 'Row', 'Column', 'DL_factor', 'Conc (uM)'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "totdata.columns"
+    "totdata['Conc (uM)']= totdata['Conc (uM)'].map('{:,.2E}'.format)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,16 +1493,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "totdata.to_excel(\"20190801_biosensor_data_w_dilution.xlsx\",index=False)"
+    "totdata.to_excel(\"20190829_biosensor_data_w_dilution.xlsx\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
