Add tests to IDT generation

--- a/jupyternotebook/AnalyseMutationsClusters/AnalyzeMutationalClusters.ipynb
+++ b/jupyternotebook/AnalyseMutationsClusters/AnalyzeMutationalClusters.ipynb
@@ -21,9 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
+   "source": [
+    "mutfile = \"muts.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "clusters = \"cluster_centers.fasta\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "mutfile = \"muts.txt\"\n",
     "clusters = \"cluster_centers.fasta\""
@@ -249,6 +273,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
